--- a/Ingineria sistemelor soft/aplicatia/temaISS/client/src/main/resources/bossMainPage.fxml
+++ b/Ingineria sistemelor soft/aplicatia/temaISS/client/src/main/resources/bossMainPage.fxml
@@ -5,8 +5,6 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -17,16 +15,10 @@
             <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                     <children>
-                        <TableView fx:id="tableView" layoutX="14.0" layoutY="22.0" prefHeight="326.0" prefWidth="287.0">
-                            <columns>
-                                <TableColumn fx:id="name" prefWidth="116.0" text="name" />
-                                <TableColumn fx:id="arivalHour" prefWidth="82.4000244140625" text="arival hour" />
-                                <TableColumn fx:id="taskStatus" prefWidth="88.0" text="task status" />
-                            </columns>
-                        </TableView>
                         <Button fx:id="sendTask" layoutX="422.0" layoutY="84.0" mnemonicParsing="false" onAction="#onSendTaskButton" text="send task" />
                         <Button fx:id="employeePerformancesButton" layoutX="422.0" layoutY="159.0" mnemonicParsing="false" onAction="#onEmployeePerformancesPush" text="employee performances" />
                         <Button fx:id="actionsButton" layoutX="425.0" layoutY="251.0" mnemonicParsing="false" onAction="#onActionsPush" text="actions on employee" />
+                  <TextArea fx:id="listView" layoutX="14.0" layoutY="32.0" prefHeight="323.0" prefWidth="370.0" />
                     </children>
                 </AnchorPane>
             </content>
