--- a/Ingineria sistemelor soft/aplicatia/temaISS/client/src/main/resources/bossMainPage.fxml
+++ b/Ingineria sistemelor soft/aplicatia/temaISS/client/src/main/resources/bossMainPage.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextArea?>
@@ -18,7 +19,7 @@
                         <Button fx:id="sendTask" layoutX="422.0" layoutY="84.0" mnemonicParsing="false" onAction="#onSendTaskButton" text="send task" />
                         <Button fx:id="employeePerformancesButton" layoutX="422.0" layoutY="159.0" mnemonicParsing="false" onAction="#onEmployeePerformancesPush" text="employee performances" />
                         <Button fx:id="actionsButton" layoutX="425.0" layoutY="251.0" mnemonicParsing="false" onAction="#onActionsPush" text="actions on employee" />
-                  <TextArea fx:id="listView" layoutX="14.0" layoutY="32.0" prefHeight="323.0" prefWidth="370.0" />
+                  <ListView fx:id="listView" layoutX="14.0" layoutY="20.0" prefHeight="324.0" prefWidth="350.0" />
                     </children>
                 </AnchorPane>
             </content>
