--- a/Ingineria sistemelor soft/aplicatia/temaISS/client/src/main/resources/employeeMainPage.fxml
+++ b/Ingineria sistemelor soft/aplicatia/temaISS/client/src/main/resources/employeeMainPage.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -14,5 +15,6 @@
             <TableColumn fx:id="deadline" prefWidth="92.0" text="deadline" />
         </columns>
       </TableView>
+      <Button fx:id="closeButton" layoutX="461.0" layoutY="333.0" mnemonicParsing="false" onAction="#OnClosePush" text="close" />
    </children>
 </AnchorPane>
