--- a/Ingineria sistemelor soft/aplicatia/temaISS/client/src/main/resources/employeeArrivalPage.fxml
+++ b/Ingineria sistemelor soft/aplicatia/temaISS/client/src/main/resources/employeeArrivalPage.fxml
@@ -5,15 +5,16 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.EmployeeArrivalPage">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.example.controller.EmployeeArrivalPage">
     <children>
-        <TextField fx:id="arrivalTimeTF" layoutX="197.0" layoutY="167.0" />
-        <Button fx:id="presentButton" layoutX="244.0" layoutY="239.0" mnemonicParsing="false" onAction="#onPresentPush" text="Present" />
-        <Label layoutX="104.0" layoutY="171.0" text="arival time" />
+        <TextField fx:id="arrivalTimeTF" layoutX="197.0" layoutY="167.0"/>
+        <Button fx:id="presentButton" layoutX="244.0" layoutY="239.0" mnemonicParsing="false" onAction="#onPresentPush"
+                text="Present"/>
+        <Label layoutX="104.0" layoutY="171.0" text="arival time"/>
         <Label layoutX="232.0" layoutY="47.0" text="Hello">
             <font>
-                <Font size="35.0" />
+                <Font size="35.0"/>
             </font>
         </Label>
     </children>
