--- a/Ingineria sistemelor soft/aplicatia/temaISS/client/src/main/resources/employeeMainPage.fxml
+++ b/Ingineria sistemelor soft/aplicatia/temaISS/client/src/main/resources/employeeMainPage.fxml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
+
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
-
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.EmployeeMainPage">
-   <children>
-      <TableView fx:id="tableView" layoutX="7.0" layoutY="39.0" prefHeight="330.0" prefWidth="354.0">
-        <columns>
-          <TableColumn fx:id="name" prefWidth="75.0" text="name" />
-          <TableColumn fx:id="description" prefWidth="185.5999755859375" text="description" />
-            <TableColumn fx:id="deadline" prefWidth="92.0" text="deadline" />
-        </columns>
-      </TableView>
-      <Button fx:id="closeButton" layoutX="461.0" layoutY="333.0" mnemonicParsing="false" onAction="#OnClosePush" text="close" />
-   </children>
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.example.controller.EmployeeMainPage">
+    <children>
+        <TableView fx:id="tableView" layoutX="7.0" layoutY="39.0" prefHeight="330.0" prefWidth="354.0">
+            <columns>
+                <TableColumn fx:id="name" prefWidth="75.0" text="name"/>
+                <TableColumn fx:id="description" prefWidth="185.5999755859375" text="description"/>
+                <TableColumn fx:id="deadline" prefWidth="92.0" text="deadline"/>
+            </columns>
+        </TableView>
+        <Button fx:id="closeButton" layoutX="461.0" layoutY="333.0" mnemonicParsing="false" onAction="#OnClosePush"
+                text="close"/>
+    </children>
 </AnchorPane>
