--- a/Ingineria sistemelor soft/aplicatia/temaISS/client/src/main/resources/logIn.fxml
+++ b/Ingineria sistemelor soft/aplicatia/temaISS/client/src/main/resources/logIn.fxml
@@ -1,23 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.LogIn">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
+      prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.example.controller.LogIn">
     <children>
-        <Button fx:id="logInButton" layoutX="264.0" layoutY="292.0" mnemonicParsing="false" onAction="#onLogInPush" text="Log in" />
-        <Label layoutX="137.0" layoutY="133.0" text="email" />
-        <Label layoutX="137.0" layoutY="204.0" text="password" />
+        <Button fx:id="logInButton" layoutX="264.0" layoutY="292.0" mnemonicParsing="false" onAction="#onLogInPush"
+                text="Log in"/>
+        <Label layoutX="137.0" layoutY="133.0" text="email"/>
+        <Label layoutX="137.0" layoutY="204.0" text="password"/>
         <Label layoutX="255.0" layoutY="55.0" text="Hello!">
             <font>
-                <Font size="26.0" />
+                <Font size="26.0"/>
             </font>
         </Label>
-      <TextField fx:id="emailTF" layoutX="226.0" layoutY="129.0" />
-      <PasswordField fx:id="passwordTF" layoutX="226.0" layoutY="200.0" />
+        <TextField fx:id="emailTF" layoutX="226.0" layoutY="129.0"/>
+        <PasswordField fx:id="passwordTF" layoutX="226.0" layoutY="200.0"/>
     </children>
 </Pane>
