--- a/Ingineria sistemelor soft/aplicatia/temaISS/client/src/main/resources/bossMainPage.fxml
+++ b/Ingineria sistemelor soft/aplicatia/temaISS/client/src/main/resources/bossMainPage.fxml
@@ -39,6 +39,7 @@
                         <Label layoutX="60.0" layoutY="165.0" text="description" />
                         <Label layoutX="67.0" layoutY="312.0" text="deadline" />
                         <Button fx:id="sendButton" layoutX="441.0" layoutY="174.0" mnemonicParsing="false" onAction="#onSendPush" text="send" />
+                  <Button fx:id="closeButton2" layoutX="448.0" layoutY="323.0" mnemonicParsing="false" onAction="#onClosePush" text="close" />
                     </children>
                 </AnchorPane>
             </content>
@@ -55,7 +56,9 @@
                         <TableColumn fx:id="statusColumn" prefWidth="93.60003662109375" text="status" />
                     </columns>
                   </TableView>
-                  <Button fx:id="raiseButton" layoutX="446.0" layoutY="173.0" mnemonicParsing="false" onAction="#onRaisePush" text="raise" />
+                  <Button fx:id="raiseButton" layoutX="441.0" layoutY="129.0" mnemonicParsing="false" onAction="#onRaisePush" text="raise" />
+                  <Button fx:id="fireButton" layoutX="440.0" layoutY="227.0" mnemonicParsing="false" onAction="#onFirePush" text="fire employee" />
+                  <Button fx:id="closeButton1" layoutX="441.0" layoutY="320.0" mnemonicParsing="false" onAction="#onClosePush" text="close" />
                </children>
             </AnchorPane>
          </content>
@@ -74,6 +77,7 @@
                   <TextField fx:id="newSalaryTF" layoutX="201.0" layoutY="204.0" />
                   <Label layoutX="121.0" layoutY="208.0" text="New slary" />
                   <Button fx:id="raiseSalaryButton" layoutX="250.0" layoutY="290.0" mnemonicParsing="false" onAction="#onRaiseSalaryPush" text="raise salary" />
+                  <Button fx:id="closeButton3" layoutX="495.0" layoutY="319.0" mnemonicParsing="false" onAction="#onClosePush" text="close" />
                </children>
             </AnchorPane>
         </content>
